Updating `links` page with rebuild

--- a/links.html
+++ b/links.html
@@ -222,8 +222,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="work-links" class="section level2">
-<h2>Work Links</h2>
+<div id="work" class="section level2">
+<h2>Work</h2>
 <ul>
 <li><a href="http://redcaptraining.umms.med.umich.edu/">REDCap Training</a></li>
 <li><a href="http://redcapproduction.umms.med.umich.edu/">REDCap Production</a></li>
@@ -238,15 +238,15 @@ $(document).ready(function () {
 <li><a href="https://github.com/seantma"><code>@seantma</code> GitHub</a></li>
 </ul>
 </div>
-<div id="r-links" class="section level2">
-<h2>R Links</h2>
+<div id="r" class="section level2">
+<h2>R</h2>
 <ul>
 <li><a href="https://www.r-project.org/">R</a></li>
 <li><a href="https://www.rstudio.com/">RStudio</a></li>
 </ul>
 </div>
-<div id="db-links" class="section level2">
-<h2>Db Links</h2>
+<div id="db" class="section level2">
+<h2>Db</h2>
 </div>
 <div id="learning-resources" class="section level2">
 <h2>Learning Resources</h2>
