Updating links in `links` page

--- a/links.html
+++ b/links.html
@@ -247,6 +247,9 @@ $(document).ready(function () {
 </div>
 <div id="db" class="section level2">
 <h2>Db</h2>
+<ul>
+<li><a href="http://sqlfiddle.com/">SQL Fiddle</a></li>
+</ul>
 </div>
 <div id="learning-resources" class="section level2">
 <h2>Learning Resources</h2>
